--- a/info.html
+++ b/info.html
@@ -502,7 +502,7 @@
       <div class="relative overflow-hidden group animate__animated animate__fadeIn" tabindex="0"
         style="perspective: 1500px">
         <img src="./assets/images/info.webp" alt="OEM向け情報 メインビジュアル | OEM Information"
-          class="w-full h-[640px] sm:h-[560px] md:h-[756px] object-cover select-none ja-parallax" />
+          class="w-full h-[640px] sm:h-[560px] md:h-[756px] object-cover select-none" />
         <!-- Centered Card Overlay -->
         <div class="absolute left-1/2 top-[55%] sm:top-[65%] z-20 animate__fadeInDownBig"
           animate="animate__fadeInDownBig" style="transform: translate(-50%, -50%)">
