--- a/privacy.html
+++ b/privacy.html
@@ -359,7 +359,7 @@
           <img
             src="./assets/images/privacy.webp"
             alt="リンク集 メインビジュアル | Links | Main Visual"
-            class="w-full h-[640px] sm:h-[560px] md:h-[756px] object-cover select-none ja-parallax"
+            class="w-full h-[640px] sm:h-[560px] md:h-[756px] object-cover select-none"
           />
           <!-- Centered Card Overlay -->
           <div
