--- a/privacy.html
+++ b/privacy.html
@@ -382,7 +382,7 @@
 
       <section aria-label="個人情報保護方針 | Privacy Policy">
         <div
-          class="max-w-[1440px] mx-auto px-4 sm:px-6 lg:px-8 py-12 flex flex-col gap-12"
+          class="max-w-[1440px] mx-auto px-4 sm:px-8 md:px-14 lg:px-20 py-12 md:py-20 lg:py-28 flex flex-col gap-12 md:gap-16 lg:gap-24"
         >
           <div>
             <h2
@@ -393,9 +393,9 @@
             >
               個人情報収集について
             </h2>
-            <div class="mt-6"></div>
+            <div class="mt-8"></div>
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] md:text-[20px] text-black leading-[20px] md:leading-[35px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -504,7 +504,7 @@
             </h2>
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -524,7 +524,7 @@
             </h2>
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -544,7 +544,7 @@
             </h2>
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -565,7 +565,7 @@
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <div class="flex flex-col gap-4">
               <p
-                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
                 data-animate="animate__fadeInUp"
                 tabindex="0"
                 style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -573,7 +573,7 @@
                 本サービスでは，お客様の負担を軽減し，より便利にご利用いただけるよう，クッキーと呼ばれる技術を使用しているページがあります。クッキーとは，お客様がホームページに訪れた際にお客様のコンピュータ内に蓄積される小さなテキストファイルのことです。
               </p>
               <p
-                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
                 data-animate="animate__fadeInUp"
                 tabindex="0"
                 style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -595,7 +595,7 @@
             </h2>
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -616,7 +616,7 @@
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <div class="flex flex-col gap-4">
               <p
-                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
                 data-animate="animate__fadeInUp"
                 tabindex="0"
                 style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -624,7 +624,7 @@
                 本サービスでは、お客様の個人情報を保護するためSSLと呼ばれる暗号化技術に対応しています。インターネットでやり取りされる個人情報などの重要情報を第三者による盗聴や改ざん，なりすましから守ることを目的としたセキュリティ機能です。SSLでは，サーバーとブラウザとの間でセキュリティに関する電子情報（デジタル認証・デジタル署名）の交換を行ない，相互認証を行った上でデータ送受信を行います。
               </p>
               <p
-                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
                 data-animate="animate__fadeInUp"
                 tabindex="0"
                 style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -632,7 +632,7 @@
                 暗号化された情報を解読するには電子的な「鍵」が必要となり，万が一，通信が第三者に盗聴された場合でも，正しい「鍵」がなければ暗号化された情報を複合することは困難であり，現実的には暗号化された情報の解読は不可能といえます。
               </p>
               <p
-                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+                class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
                 data-animate="animate__fadeInUp"
                 tabindex="0"
                 style="--animate-duration: 1s; animation-delay: 0.28s"
@@ -654,7 +654,7 @@
             </h2>
             <hr class="w-full border-gray-300 my-2 mb-6" />
             <p
-              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[30px]"
+              class="animate-on-scroll opacity-0 text-[12px] sm:text-[20px] text-black leading-[20px] leading-[20px] md:leading-[30px] lg:leading-[40px]"
               data-animate="animate__fadeInUp"
               tabindex="0"
               style="--animate-duration: 1s; animation-delay: 0.28s"
