--- a/inquiries.html
+++ b/inquiries.html
@@ -906,7 +906,7 @@
                         name="inquiry_body"
                         placeholder="ご用件を記載下さい。(全半角1,000文字以内)"
                         maxlength="1000"
-                        class="w-full h-[100px] md:h-[120px] p-2 border border-gray-300 rounded-md resize-y"
+                        class="w-full h-[200px] md:h-[250px] p-2 border border-gray-300 rounded-md resize-y"
                         required
                       ></textarea>
                     </div>
@@ -914,16 +914,16 @@
                   <hr class="my-3" />
                 </div>
                 <!-- Submit + Consent -->
-                <div class="mt-2 flex flex-col items-center gap-4 w-full">
+                <div class="mt-2 flex flex-col items-center gap-8 w-full">
                   <div class="flex items-center gap-2">
                     <input
                       type="checkbox"
                       id="privacy-policy-checkbox"
-                      class="w-3 h-3 accent-[#007BA8] cursor-pointer"
+                      class="w-[14px] h-[14px] accent-[#007BA8] cursor-pointer"
                     />
                     <label
                       for="privacy-policy-checkbox"
-                      class="text-[14px] sm:text-[16px] text-gray-700 cursor-pointer"
+                      class="text-[14px] sm:text-[16px] text-black cursor-pointer"
                     >
                       <a
                         href="./privacy.html"
@@ -938,7 +938,7 @@
                   <button
                     type="submit"
                     id="submit-inquiry"
-                    class="flex items-center justify-center bg-[#042D53] text-white px-8 py-2 rounded-md transition-colors duration-200 disabled:bg-gray-400 disabled:text-gray-200"
+                    class="flex items-center justify-center bg-[#042D53] text-white px-10 py-4 rounded-md transition-colors duration-200 disabled:bg-gray-500 disabled:text-gray-200"
                     style="font-size: 24px"
                     disabled
                   >
